# xwawa-ai-gateway

./: .env.example  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
admin-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-frontend/src/: App.tsx  index.css
admin-frontend/src/api/: client.ts
admin-frontend/src/components/: Sidebar.tsx
admin-frontend/src/pages/: ApiKeysPage.tsx  DashboardPage.tsx  LoginPage.tsx  UsagePage.tsx  UsersPage.tsx
alembic/: README.md  env.py
langchain_integration/: README.md  pyproject.toml
langchain_integration/src/xwawa_langchain/: __init__.py  chat.py  embeddings.py
scripts/: gen_compose.py  init_db.py  init_schema.sql
src/: __init__.py  config.py  db.py  exceptions.py  logging_config.py  main.py  middlewares.py  middlewares_rate_limit.py
src/a2a/: __init__.py  protocol.py  protocol_v2.py
src/api/v1/: __init__.py  a2a.py  admin.py  auth.py  chat.py  discovery.py  payment.py  schemas.py  wallet.py  ws.py
src/audit/: __init__.py  logger.py  ml_detector.py
src/billing/: __init__.py  pricing.py
src/payment/: __init__.py  providers.py
src/providers/: __init__.py  anthropic.py  base.py  deepseek.py  doubao.py  midjourney.py  minimax.py  openai.py
src/routing/: __init__.py  router.py
src/wallet/: __init__.py  credit.py  crud.py  models.py
tests/: test_core.py
user-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
user-frontend/src/: App.tsx  index.css
user-frontend/src/api/: client.ts
user-frontend/src/pages/: AgentsPage.tsx  ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx  WalletPage.tsx
