[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xwawa-langchain"
version = "0.2.0"
description = "xwawa-ai-gateway LangChain Integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[project.urls]
Homepage = "https://github.com/Tony1251/xwawa-ai-gateway"

[tool.hatch.build.targets.wheel]
packages = ["src/xwawa_langchain"]
